# Voyage_analysis_major_project

./: README.md  pyproject.toml  requirements.txt
api/: app.py
api/routes/: predict.py
api/schemas/: request.py
models/saved/: label_encoders.pkl
notebooks/: data_cleaning.ipynb  data_loading.ipynb  eda_bivariate.ipynb  eda_multivariate.ipynb  eda_univariate.ipynb  model_training.ipynb
